--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "json-server": "json-server-auth db.json"
+    "json-server": "json-server-auth db.json",
+    "backend": "node backend/index.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -28,11 +29,16 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-virtual": "^3.13.12",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "express": "^5.2.1",
+    "google-auth-library": "^9.0.0",
     "json-server-auth": "^1.2.1",
+    "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "lucide-react": "^0.554.0",
     "match-sorter": "^8.1.0",
